--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,28 @@
 name: todo_app
-description: A simple TODO app.
+description: "A new Flutter project."
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   firebase_core: ^2.24.2
-  firebase_database: ^10.4.0
-  firebase_auth: ^4.17.6
+  firebase_auth: ^4.15.3
+  firebase_database: ^10.3.8
   provider: ^6.1.1
-  share_plus: ^7.2.2
-  url_launcher: ^6.2.4
-  path_provider: ^2.1.2
-  app_links: ^3.5.0
+  share_plus: ^7.2.1
+  url_launcher: ^6.2.2
+  app_links: ^3.4.3
+  path_to_regexp: ^0.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
