--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "todo_app",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#6750A4",
+    "theme_color": "#6750A4",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
@@ -31,5 +31,21 @@
             "type": "image/png",
             "purpose": "maskable"
         }
-    ]
+    ],
+    "related_applications": [
+        {
+            "platform": "play",
+            "id": "com.example.todo_app",
+            "url": "https://play.google.com/store/apps/details?id=com.example.todo_app"
+        }
+    ],
+    "share_target": {
+        "action": "/task",
+        "method": "GET",
+        "params": {
+            "title": "title",
+            "text": "text",
+            "url": "url"
+        }
+    }
 }
